@@ -1607,11 +1607,6 @@ extern int validate_node_specs(slurm_node_registration_status_msg_t *reg_msg)
 #endif
 		}
 	} else {
-		uint16_t err_cpus = 0;
-		select_g_select_nodeinfo_get(node_ptr->select_nodeinfo,
-					     SELECT_NODEDATA_SUBCNT,
-					     NODE_STATE_ERROR,
-					     &err_cpus);
 		if (IS_NODE_UNKNOWN(node_ptr)) {
 			last_node_update = now;
 			reset_job_priority();
@@ -1625,8 +1620,7 @@ extern int validate_node_specs(slurm_node_registration_status_msg_t *reg_msg)
 					node_flags;
 				node_ptr->last_idle = now;
 			}
-			if (!err_cpus
-			    && !IS_NODE_DRAIN(node_ptr)
+			if (!IS_NODE_DRAIN(node_ptr)
 			    && !IS_NODE_FAIL(node_ptr)) {
 				xfree(node_ptr->reason);
 				node_ptr->reason_time = 0;
@@ -1653,8 +1647,7 @@ extern int validate_node_specs(slurm_node_registration_status_msg_t *reg_msg)
 			     reg_msg->node_name);
 			reset_job_priority();
 			trigger_node_up(node_ptr);
-			if (!err_cpus
-			    && !IS_NODE_DRAIN(node_ptr)
+			if (!IS_NODE_DRAIN(node_ptr)
 			    && !IS_NODE_FAIL(node_ptr)) {
 				xfree(node_ptr->reason);
 				node_ptr->reason_time = 0;
@@ -1862,11 +1855,6 @@ extern int validate_nodes_via_front_end(
 #endif
 			}
 		} else {
-			uint16_t err_cpus = 0;
-			select_g_select_nodeinfo_get(node_ptr->select_nodeinfo,
-						     SELECT_NODEDATA_SUBCNT,
-						     NODE_STATE_ERROR,
-						     &err_cpus);
 			if (reg_hostlist)
 				(void) hostlist_push_host(
 					reg_hostlist, node_ptr->name);
@@ -1886,8 +1874,7 @@ extern int validate_nodes_via_front_end(
 						node_flags;
 					node_ptr->last_idle = now;
 				}
-				if (!err_cpus
-				    && !IS_NODE_DRAIN(node_ptr)
+				if (!IS_NODE_DRAIN(node_ptr)
 				    && !IS_NODE_FAIL(node_ptr)) {
 					xfree(node_ptr->reason);
 					node_ptr->reason_time = 0;
@@ -1910,8 +1897,7 @@ extern int validate_nodes_via_front_end(
 					node_ptr->last_idle = now;
 				}
 				trigger_node_up(node_ptr);
-				if (!err_cpus
-				    && !IS_NODE_DRAIN(node_ptr)
+				if (!IS_NODE_DRAIN(node_ptr)
 				    && !IS_NODE_FAIL(node_ptr)) {
 					xfree(node_ptr->reason);
 					node_ptr->reason_time = 0;
